--- a/src/app/(mainsite)/components/Pages/Donate/donate.module.css
+++ b/src/app/(mainsite)/components/Pages/Donate/donate.module.css
@@ -86,6 +86,27 @@
     
     .bgImg{
         object-position: left center;
+    }
+}
 
+/* SMALL LAPTOP STYLES */
+@media only screen and (min-width: 991px) and (max-width: 1400px){
+    
+    .donateSection div{
+        padding: 1vw 0;
+        width: 60vw;
+    }
+    .donateSection h2{
+        font-size: 4rem;
+    }
+    .donateSection p{
+        margin: 2vw 0;
+        font-size: 1.4rem;
+        line-height: 2.1rem;
+    }
+    
+    .donateSection span{
+        font-size: 1.2rem;
+        margin-bottom: 2vw;
     }
 }
