--- a/src/app/(dashboard)/dashboard/components/(pages)/TeamEditor/teameditor.module.css
+++ b/src/app/(dashboard)/dashboard/components/(pages)/TeamEditor/teameditor.module.css
@@ -40,6 +40,9 @@
     display: flex;
     flex-direction: column;
     height: 100%;
+    filter: drop-shadow(0px 0px 4px rgba(0,0,0,0.5));
+    z-index: 0;
+    position: relative;
 }
 
 .reorder button{
@@ -50,6 +53,7 @@
     background-size: 100%;
     background-position: center;
     transition: 0.3s background-color;
+    
 }
 .reorder button:hover{
     background-color: #e9e9e9;
@@ -195,5 +199,57 @@
  
 /* MOBILE STYLES */
 @media only screen and (max-width: 649px){
-
+    .wrapper{
+        width: 90vw;
+        padding: 2vw;
+        margin-bottom: 4vw;
+        border-radius: 8px;
+        box-shadow: none;
+    }
+    
+    .addButton{
+        width: 40vw;
+        margin-bottom: 4vw;
+    }
+    
+    .teamMemberEditor{
+        margin: 4vw 0;
+        padding: 2vw 0;
+    }
+    
+    
+    .reorder button{
+        width: 8vw;
+        height: 8vw;
+    }
+    .profileImg{
+        width: 14vw;
+        height: 14vw;
+    }
+    
+    .profileTitle{
+        padding: 1vw 0;
+    }
+    
+    .photoInput{
+        font-size: 1.1rem;
+        padding: 0.2vw 0.7vw;
+        width: 18vw;
+    }
+    
+    .inputWrapper input, .inputWrapper textarea{
+        width: 30vw;
+        margin: 0.2vw 0;
+        font-size: 1rem;
+        padding: 1vw 1.2vw;
+    }
+    
+    .inputWrapper textarea{
+        border-radius: 5px;
+        height: 10vw;
+    }
+    .deleteButton{
+        height: 20vw;
+        width: 6vw;
+    }
 }
