--- a/src/app/(dashboard)/dashboard/components/editor.module.css
+++ b/src/app/(dashboard)/dashboard/components/editor.module.css
@@ -77,7 +77,7 @@
     flex-direction: column;
 }
 
-.inputWrapper input, .inputWrapper textarea{
+.inputWrapper input, .inputWrapper textarea, .titleWrapper textarea{
     display: inline-block;
     width: 15vw;
     border: none;
@@ -88,13 +88,13 @@
     box-shadow: 0px 4px 8px rgba(0,0,0,0.5);
 }
 
-.inputWrapper textarea{
+.inputWrapper textarea, .titleWrapper textarea{
     resize: none;
     border-radius: 10px;
     height: 5vw;
 }
 
-.inputWrapper input:focus, .inputWrapper textarea:focus{
+.inputWrapper input:focus, .inputWrapper textarea:focus, .titleWrapper textarea:focus{
     outline: 2px solid var(--secondary-text-color);
 }
 
