finalized contact form

--- a/src/app/(mainsite)/components/Pages/Contact/ContactForm/contactform.module.css
+++ b/src/app/(mainsite)/components/Pages/Contact/ContactForm/contactform.module.css
@@ -1,7 +1,7 @@
 .contactFormWrapper{
     flex-direction: column;
     margin: 0 5vw;
-    background-color: #7599bd;
+    background-color: #3f5b76;
     padding: 2vw 0;
 }
 
