--- a/src/app/(mainsite)/components/Pages/Contact/ContactMethods/contactmethods.module.css
+++ b/src/app/(mainsite)/components/Pages/Contact/ContactMethods/contactmethods.module.css
@@ -7,7 +7,7 @@
 }
 
 .contactMethod{
-    background-color: #7599bd;
+    background-color: #3f5b76;
     display: inline-flex;
     justify-content: space-evenly;
     align-items: center;
