--- a/src/app/(mainsite)/components/Pages/HomePage/RecentArticles/recentarticles.module.css
+++ b/src/app/(mainsite)/components/Pages/HomePage/RecentArticles/recentarticles.module.css
@@ -1,6 +1,22 @@
 .recentArticles{
     position: relative;
     padding: 2vw 0;
+    min-height: 32vw;
+}
+
+.noData{
+    position: absolute;
+    top:0;
+    left:0;
+    width: 100%;
+    height: 100%;
+    text-align: center;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: var(--main-color);
+    font-size: 6rem;
+    font-family: var(--secondary-font);
 }
 
 .recentArticlesTitle{
@@ -35,6 +51,7 @@
 @media only screen and (min-width: 650px) and (max-width: 990px){  
     .recentArticles{
         padding: 3vw 0;
+        min-height: 45vw;
     }
     .moreArticles{
         padding: 4vw 5vw 2vw 0;
@@ -49,6 +66,7 @@
 @media only screen and (max-width: 649px){
     .recentArticles{
         padding: 4vw 0;
+        min-height: 80vw;
     }
     .moreArticles{
         padding: 6vw 5vw 4vw 0;
