--- a/src/app/(mainsite)/components/Pages/HomePage/UpcomingEvents/upcomingevents.module.css
+++ b/src/app/(mainsite)/components/Pages/HomePage/UpcomingEvents/upcomingevents.module.css
@@ -1,5 +1,7 @@
 .upcomingEvents{
     padding: 2vw 0;
+    min-height: 25vw;
+    position: relative;
 }
 
 .upcomingEventsTitle{
@@ -65,11 +67,27 @@ li:has(.upcomingEvent){
     margin: 1vw 0.5vw;
 }
 
+.noData{
+    position: absolute;
+    top:0;
+    left:0;
+    width: 100%;
+    height: 100%;
+    text-align: center;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: var(--main-color);
+    font-size: 6rem;
+    font-family: var(--secondary-font);
+}
+
 
 /* SMALL LAPTOP STYLES */
 @media only screen and (min-width: 991px) and (max-width: 1400px){
     .upcomingEvent{
         width: 40vw;
+        
     }
 }
 
@@ -77,6 +95,7 @@ li:has(.upcomingEvent){
 @media only screen and (min-width: 650px) and (max-width: 990px){
     .upcomingEvents{
         padding: 3vw 0;
+        min-height: 35vw;
     }
     .upcomingEvent{
         width: 60vw;
