--- a/src/app/styles.css
+++ b/src/app/styles.css
@@ -30,6 +30,20 @@ body{
     position: relative;
 }
 
+.noData{
+    position: absolute;
+    top:0;
+    left:0;
+    width: 100%;
+    height: 100%;
+    text-align: center;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: var(--main-color);
+    font-size: 6rem;
+    font-family: var(--secondary-font);
+}
 
 section{
     background-color: var(--main-bg-color);
