--- a/src/app/(mainsite)/components/Pages/Event/event.module.css
+++ b/src/app/(mainsite)/components/Pages/Event/event.module.css
@@ -12,11 +12,13 @@
     width: 60%;
     margin: 0 16%;
     background-color: white;
+    position: relative;
+    min-height: 25vw;
 }
 .title{
     font-size: 3.5rem;
 }
-div:has(.icon){
+.locationWrapper, .dateWrapper{
     display: flex;
     align-items: center;
     font-style: italic;
@@ -47,6 +49,7 @@ div:has(.icon){
         padding: 4vw 2%;
         width: 80%;
         margin: 0 6%;
+        min-height: 40vw;
     }
     .icon{
         width: 4vw;
@@ -77,6 +80,7 @@ div:has(.icon){
         padding: 4vw 2%;
         width: 90%;
         margin: 0 3%;
+        min-height: 90vw;
     }
     .icon{
         width: 6vw;
