--- a/src/app/(mainsite)/components/Pages/HomePage/Header/homepageheader.module.css
+++ b/src/app/(mainsite)/components/Pages/HomePage/Header/homepageheader.module.css
@@ -1,7 +1,7 @@
 .header{
     width: 100%;
     min-height: 90vh;
-    background-image: url("/img/main-bg.jpg");
+    background-image: url("/img/header.webp");
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
