--- a/src/app/(mainsite)/components/Pages/gallerypage/GalleryContent/gallerycontent.module.css
+++ b/src/app/(mainsite)/components/Pages/gallerypage/GalleryContent/gallerycontent.module.css
@@ -8,7 +8,7 @@
     width: 40%;
     aspect-ratio: 1/0.7;
     object-fit: cover;
-    object-position: center;
+    object-position: top;
     border-radius: 10px;
     margin: 2.5vw 5%;
 }
